--- a/clients/dev-client/src/app/components/requests-creation/requests-creation.component.css
+++ b/clients/dev-client/src/app/components/requests-creation/requests-creation.component.css
@@ -1,7 +1,7 @@
 #customer-request-form {
   display: flex;
   flex-direction: column;
-  gap: 0.8rem;
+  gap: 0.4rem;
   padding: 1rem;
   width: 40%;
   background-color: #363533;
@@ -18,8 +18,6 @@ section {
   display: flex;
   justify-content: space-between;
   gap: 1rem;
-
-  border-bottom: 1px solid black;
 }
 
 #header-center {
@@ -28,7 +26,7 @@ section {
   flex-direction: column;
 }
 
-#header-right {
+#header-left {
   flex: 1;
   align-self: flex-end;
   flex-direction: row;
@@ -36,7 +34,7 @@ section {
   align-items: center;
 }
 
-#header-right input[type="checkbox"] {
+#header-left input[type="checkbox"] {
   flex: 1;
   width: 20px;
   height: 20px;
@@ -46,16 +44,14 @@ section {
   border-radius: 4px;
 }
 
-#header-right label {
+#header-left label {
   flex: 2;
 }
 
 #middle {
   display: flex;
   gap: 1rem;
-
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
+  align-items: stretch;
 }
 
 #middle-left {
@@ -64,6 +60,7 @@ section {
 
 #middle-left textarea {
   resize: none;
+  height: 100%;
 }
 
 #middle-right {
@@ -76,9 +73,7 @@ section {
 #bottom {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-
-  border-top: 1px solid black;
+  align-items: flex-end;
 }
 
 #bottom-right {
