add quest cards

--- a/clients/dev-client/src/app/components/requests-grid/requests-grid.component.html
+++ b/clients/dev-client/src/app/components/requests-grid/requests-grid.component.html
@@ -1,3 +1,5 @@
-<div>
-    
+<div class="quest-grid">    
+    @for (quest of customerRequestList | async; track quest.customerRequestId) {
+        <app-quest-card [quest]="quest" [visibility]="visibilityEnum"></app-quest-card>
+    }
 </div>
