--- a/clients/dev-client/src/app/pages/customer-request-management/customer-request-management.component.html
+++ b/clients/dev-client/src/app/pages/customer-request-management/customer-request-management.component.html
@@ -18,9 +18,7 @@
     </app-requests-creation>
   </section>
 
-  <div id="call-visualizer" *ngIf="!isVisualizerActive" (click)="openGallery()">
-    <p>Gallery</p>
-  </div>
+  <button id="call-visualizer" *ngIf="!isVisualizerActive" (click)="openGallery()">Gallery</button>
 </main>
 
 <app-requests-gallery 
