--- a/clients/dev-client/src/app/pages/customer-request-management/customer-request-management.component.css
+++ b/clients/dev-client/src/app/pages/customer-request-management/customer-request-management.component.css
@@ -46,15 +46,14 @@ main {
     padding: 0.5rem;
     margin: 0.4rem;
     background-color: #666261a3;
+    color: #f7cba2;
     border-radius: 4px;
+    font-size: 1rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 550;
+}
 
-    p {
-        margin: 0;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-
-    p:hover {
-        cursor: pointer;
-        color: #f7cba2;
-    }
+#call-visualizer:hover {
+    cursor: pointer;
+    background-color: #666261;
 }
