--- a/clients/dev-client/src/app/components/requests-creation/requests-creation.component.css
+++ b/clients/dev-client/src/app/components/requests-creation/requests-creation.component.css
@@ -75,6 +75,8 @@ section {
 #middle-left textarea {
   resize: none;
   height: 100%;
+  width: -moz-available;
+  width: -webkit-fill-available;
 }
 
 #middle-right {
@@ -113,4 +115,16 @@ input::-webkit-inner-spin-button {
 
 input[type="number"] {
   -moz-appearance: textfield;
+}
+
+#jsonInput {
+  resize: none;
+  appearance: none;
+  height: 12rem;
+  width: -moz-available;
+  width: -webkit-fill-available;
+}
+
+.bt-ready {
+  background-color: #7d6d6d;
 }
